base/httpbin-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: httpbin-demo
  annotations:
    konghq.com/path: "/headers"
spec:
  type: ExternalName
  externalName: httpbin.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: default
  annotations: 
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
